# monster-rpg-2

./: CMakeLists.txt  Desc-dutch  Desc-english  Desc-french  Desc-german  Desc-italian  Desc-polish  Desc-portuguese  Desc-spanish  LICENSE.txt  Monster2.icns  MonsterRPG2_64.desktop  MonsterRPG2_Demo_32.desktop  MonsterRPG2_Demo_64.desktop  Prologue.rtf  README.md  README.txt  ReadMe.txt  achievement_names.txt  achievements.txt  allegro5_ttf.diff  android-ttf.diff  codesign.txt  french-desc-googleplay.txt  installer.nsi  libsvgtiny.diff  log  mac-icon.acorn  mkbutton.cpp  mkdebianbinpackage.sh  mkdebiansrcpackage.sh  monster-rpg2.desktop  monsterrpg2-pi.diff  r15685.diff  setdebversion.sh  splittilemap.cpp  staff-lite.tga  strings1  strings2  strings3  (+8 more)
Monster RPG 2/Monster RPG 2/: Info.plist
Monster RPG 2/Monster RPG 2.xcodeproj/: project.pbxproj
amazon-proj/: AndroidManifest.xml  local.properties
amazon-proj/jni/: Android.mk
android-4-proj/: AndroidManifest.xml
android-4-proj/jni/: Android.mk  Application.mk
android-demo-proj/: AndroidManifest.xml
android-proj/: AndroidManifest-full.xml  AndroidManifest-lite.xml  AndroidManifest.xml  build-release.sh  build.xml  my-release-key.keystore  run.sh  sign.bat  sign.sh
d/: README.Debian  README.source  changelog  control  menu  rules
data/: CURL.txt  Dutch.utf8  English.utf8  French.utf8  German.utf8  Greek.utf8  Italian.utf8  Polish.utf8  Portuguese-Brazil.utf8  Portuguese-Europe.utf8  Russian.utf8  Spanish.utf8  Version  fairy.tga  gui.png.xml  map.lua  trophy.tga  zeemote.tga
debian-data/: README.Debian  README.source  changelog  control  copyright  rules
diffs/: allegro5_ttf.diff
docs/: FamilyLicense.txt  FreewareLicense.txt  LICENSE.txt  ReadMe-Mac-Installer.txt  ReadMe.txt  achievements.txt
flac-music/: 12okt.flac  beach.flac  dockknocking.flac  farmer.flac  final_boss.flac  fire.flac  forest.flac  fortress.flac  jungle.flac  jungle_ambience.flac  jungle_shop.flac  keep.flac  lander.flac  landing.flac  loadsave.flac  map.flac  map2.flac  monastery.flac  moon2.flac  seaside_repaired.flac  underwater_final.flac
google-proj/: AndroidManifest.xml  project.properties
googleplay-proj/: AndroidManifest.xml  build.xml  sign.bat
icons/: icon.icns  ln-full.sh  ln-lite.sh
include/: 3d.hpp  60beat.h  Animation.hpp  AnimationSet.hpp  Area.hpp  CombatEntity.hpp  CombatInfo.hpp  CombatPlayer.hpp  CombatStatus.hpp  Combatant.hpp  Configuration.hpp  Error.hpp  Frame.hpp  GameInfo.hpp  GenericEffect.hpp  Image.hpp  Input.hpp  Items.hpp  Object.hpp  Player.hpp  Spells.hpp  atlas.h  atlas.hpp  atlas_internal.h  atlas_internal.hpp  battle.hpp  c.h  classes.hpp  coord_map.h  gamecenter.h  graphics.hpp  init.hpp  inventory.hpp  io.hpp  iphone.h  java.h  joypad.hpp  joypad_handler.h  lander.hpp  mapping.h  (+16 more)
iphonedata/: Dutch.utf8  English.utf8  French.utf8  German.utf8  Greek.utf8  Italian.utf8  Polish.utf8  Portuguese-Brazil.utf8  Portuguese-Europe.utf8  Russian.utf8  Spanish.utf8  gui.tga  staff.tga  water.xml
kindlefire-proj/: AndroidManifest-full.xml  AndroidManifest-lite.xml  AndroidManifest.xml  aa.java  app_process  build-full.xml  build-lite.xml  gdb.setup  my-release-key.keystore  run.sh  sign.sh
lite-music/: happtroll.flac  tutorial.flac
litedata/: Greek.utf8  Portuguese-Brazil.utf8  trans.xml
lua-fixed/: Makefile
mac-icons/: icon.icns
misc/: MonsterRPG2_32.desktop  MonsterRPG2_Demo_32.desktop  installer-demo.nsi  installer.nsi
morpgpc/: morpgpc-Info.plist
morpgpc-mac-bass/: morpgpc-Info.plist  morpgpc_Prefix.pch
origdata/: Blizzard.flp  Blizzard.mid  Blizzard2.flp  Blizzard2_2.flp  Blizzard3.flp  Chris_Hildenbrand_Touch.mobileprovision  Eny_stand_e.tga  Eny_stand_n.tga  Eny_stand_w.tga  Eny_walk_e.tga  Eny_walk_n.tga  Eny_walk_s.tga  Eny_walk_w.tga  Eny_world.tga  Flowey.flp  Michael_Croft_ad_hoc.mobileprovision  Michael_Croft_ad_hoc_2G.mobileprovision  Muttrace.flp  Testing Notes 0001 -- ad hoc testing.txt  Tiggy_stand_e.tga  Tiggy_stand_n.tga  Tiggy_stand_s.tga  Tiggy_walk_e.tga  Tiggy_walk_n.tga  Tiggy_walk_s.tga  Tiggy_world.tga  Translation_notes_feedback.rtf  arrow.blend  arrow_1.blend  arrow_1.blend1  arrow_1.blend2  arrow_1.mtl  arrow_2.blend  arrow_2.mtl  arrow_3.acorn  arrow_3.blend  arrow_3.blend1  arrow_3.blend2  arrow_3.mtl  big_font.pcx  (+82 more)
ouya-proj/: AndroidManifest.xml  install  local.properties  run  sign
ouya_noiap-project/: AndroidManifest.xml
overrides/: monster-rpg-2-data  monster-rpg2
rawinput/: build.xml
saves/: after_forest_in_map.save  after_jungle.save  arrived_at_castle.save  beat_beach.save  beat_boss_1.save  beat_evil_tig.save  beat_girl_dragon.save  beat_golems.save  beat_rider.save  beat_tode.save  beat_valley.save  cleared_castle.save  cleared_castle_2.save  cleared_everything.save  cleared_farm.save  cleared_flowey.save  cleared_mountains.save  cleared_muttrace.save  cleared_volcano.save  current.save  just_passed_fortress.save  landed.save  lander_launched.save
src/: 3d.cpp  3d.hpp  60beat.m  Animation.cpp  Animation.hpp  AnimationSet.cpp  AnimationSet.hpp  Area.cpp  Area.hpp  CombatActions.cpp  CombatActions.hpp  CombatEnemy.cpp  CombatEnemy.hpp  CombatEntity.cpp  CombatEntity.hpp  CombatPlayer.cpp  CombatPlayer.hpp  Combatant.cpp  Combatant.hpp  Configuration.cpp  Configuration.hpp  Frame.cpp  Frame.hpp  GenericEffect.cpp  Image.cpp  Image.hpp  Input.cpp  Input.hpp  Items.cpp  Makefile.lgeneric  Makefile.lgeneric-lite  Makefile.lgeneric32  Makefile.lgeneric32-lite  Makefile.mingw  Makefile.mingwd3d  Makefile.mingwd3d-debug  Makefile.mingwd3d-lite  Makefile.mingwgl  Makefile.mingwgl-debug  Makefile.mingwgl-lite  (+90 more)
tgui/: CmakeLists.txt  Makefile.android  Makefile.mingw  Makefile.osx  Makefile.unix  tgui.cpp
tools/: fixup_players.cpp  mksave.cpp  replace_color.cpp  restore.cpp  sign.bat  sign.sh  splittilemap.cpp  to_pastable.cpp
ubuntu/: README.Debian  README.source  changelog  control  copyright  menu  rules
ubuntu-data/: README.source  changelog  control  copyright  rules
winbin/: LICENSE.txt
windows_binary/: LICENSE.txt  Uninstall.html
(+4072 files in other folders)
